--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "public/index.html",
   "repository": "UWStout/gdd325-web-base-lite",
   "scripts": {
-    "start": "npm-run-all -s cpindex server",
+    "start": "npm-run-all -s buildindex server",
     "dev": "npm-run-all -s cpdevindex server",
-    "cpindex": "node copyIndex",
-    "cpdevindex": "__DEV__=true node copyIndex",
+    "buildindex": "node buildIndex",
+    "cpdevindex": "__DEV__=true node buildIndex",
     "server": "browser-sync start -s 'public' -w -f 'public/**/*' -b 'google chrome'",
     "test": "eslint ./public/src/**/**.js"
   },
@@ -22,6 +22,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
+    "insert-line": "^1.1.0",
+    "linenumber": "^1.0.0",
     "npm-run-all": "^4.1.5"
   }
 }
